feat: atualizar de forma simples a logo, styles do modo dark, pequenos detalhes da página e diretórios

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/vars.css" >
+     <link rel="stylesheet" href="./styles/style.css" >
     <title>Multiverso News</title>
 </head>
 
@@ -12,7 +13,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a href="index.html">
-                <img src="./img/cuteBearLogo.png" alt="logo de um urso roxo usando um joystick">    
+                <img class="logo" src="./img/Logos/LogoMN.png" alt="Logo de um urso roxo usando um joystick">    
             </a>
             <div class="cabecalho__div__links">
                 <a class="cabecalho__links" href="">
@@ -25,7 +26,7 @@
                     Musicas
                 </a>
             </div>
-            <button class="buttomTema" onclick="mudaTema()"><img src="./img/Dark Mode.png" alt=""></button>
+            <button class="buttomTema" onclick="mudaTema()"><img src="./img/UI/Dark Mode.png" alt=""></button>
         </nav>
     </header>
     <main class="container">
@@ -35,7 +36,7 @@
         <div class="container__artigos">
             <article class="container__noticia">
                 <a href="">
-                    <img class="noticia__imagem" src="./img/img_silksong.png" alt="Novo jogo do Hollow Knight">
+                    <img class="noticia__imagem" src="./img/Noticias/img_silksong.png" alt="Novo jogo do Hollow Knight">
                 </a>
                 <div class="container__noticia__div">
                     <h2>
@@ -43,14 +44,13 @@
                             Novo jogo do Hollow Knight
                         </a>
                     </h2>
-                    <p class="container__noticia__info">Mussum Ipsum, cacilds vidis litro abertis. In elementis mé pra quem é amistosis quis leo. Quem
-                        num gosta di mé, boa gentis num é.
+                    <p class="container__noticia__info">Enquanto a espera por Silksong continua, a Team Cherry confirmou novos segredos para o universo de Hallownest. O foco será em mecânicas inéditas que prometem expandir o desafio do metroidvania original para os fãs veteranos.
                     </p>
                 </div>
             </article>
             <article class="container__noticia">
                 <a href="">
-                    <img class="noticia__imagem" src="./img/img_eldenRing.png" alt="Novo jogo Elden Ring tem um Heroi">
+                    <img class="noticia__imagem" src="./img/Noticias/img_eldenRing.png" alt="Novo jogo Elden Ring tem um Heroi">
                 </a>
                 <div class="container__noticia__div">
                     <h2>
@@ -58,14 +58,11 @@
                             Novo jogo Elden Ring tem um Heroi
                         </a>
                     </h2>
-                    <p class="container__noticia__info">Mussum Ipsum, cacilds vidis litro abertis. In elementis mé pra quem é amistosis quis leo. Quem
-                        num gosta di mé, boa gentis num é.
-                    </p>
-                </div>
+                    <p class="container__noticia__info">Um novo herói surgiu nas Terras Intermédias. Conhecido por derrotar Malenia sozinho para outros players, o jogador tornou-se um ícone de habilidade e solidariedade, transformando a luta mais difícil do game em um espetáculo de técnica.
             </article>
             <article class="container__noticia">
                 <a href="">
-                    <img class="noticia__imagem" src="./img/img_cookieclicker.png"
+                    <img class="noticia__imagem" src="./img/Noticias/img_cookieclicker.png"
                         alt="Novo jogo Elden Ring tem um Heroi">
                 </a>
                 <div class="container__noticia__div">
@@ -74,8 +71,7 @@
                             Cookie clicker
                         </a>
                     </h2>
-                    <p class="container__noticia__info">Mussum Ipsum, cacilds vidis litro abertis. In elementis mé pra quem é amistosis quis leo. Quem
-                        num gosta di mé, boa gentis num é.
+                    <p class="container__noticia__info">O viciante jogo incremental recebeu novos portais e construções absurdas. A febre dos cliques continua atraindo milhares de jogadores que buscam bater recordes de decilhões de biscoitos, provando que o clássico ainda é o rei do gênero.
                     </p>
                 </div>
             </article>
@@ -84,14 +80,14 @@
     <footer>
         <div >
             <a class="rodape__footer" href="">
-                <img src="./img/cuteBearLogoMenor.png" alt="">
+                <img class="logo" src="./img/Logos/LogoMN.png" alt="Logo de um urso roxo usando um joystick">  
                 <p class="rodape__footer__titulo">Multiverso News</p>
             </a>
         </div>
         <p class="rodape__c">
-            ©️ 2024 - 2024 Christian Rui
+            ©️ 2024 christianwl
             <br>
-            Todas as imagens de games, filmes e etc são marcas registradas dos seus respectivos proprietários.
+            Projeto para fins educacionais. Todas as marcas, logotipos e imagens de jogos são de propriedade de seus respectivos donos.
         </p>
 
     </footer>
