--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/vars.css" >
-     <link rel="stylesheet" href="./styles/style.css" >
+
     <title>Multiverso News</title>
+
+    <link rel="stylesheet" href="./styles/reset.css">
+    <link rel="stylesheet" href="./styles/vars.css" >
+    <link rel="stylesheet" href="./styles/style.css" >
+
 </head>
 
 <body>
