refactor: alterar footer e adicionar meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <meta
+      name="description"
+      content="projeto de estudo desenvolvido com o objetivo de aplicar conceitos fundamentais de HTML e CSS na construção prática de um portal de notícias de games."
+    />
+    <meta name="author" content="christianwl" />
+
     <title>Multiverso News</title>
 
     <link rel="stylesheet" href="./styles/reset.css">
@@ -89,7 +95,7 @@
             </a>
         </div>
         <p class="rodape__c">
-            ©️ 2024 christianwl
+            <span>&copy; 2024 christianwl</span>      
             <br>
             Projeto para fins educacionais. Todas as marcas, logotipos e imagens de jogos são de propriedade de seus respectivos donos.
         </p>
